@@ -31,11 +31,22 @@ pub fn create_dorm_manager() -> NPC {
     let manager = NPC {
         entity: Entity::new(),
         name: "manager".to_string(),
-        dialogue: vec!["What are you doing here Adam? It't not like you to be late.
+        dialogue: vec!["What are you doing here Adam? It's not like you to be late.
 Get to the auditorium before you miss the ceremony.".to_string(), "Why are you still here, get a move on.".to_string()],
         talked_to: 0,
         id: 1
     };
-    
     return manager;
+}
+
+/// Create the school receptionist
+pub fn create_school_receptionist() -> NPC {
+    let receptionist = NPC {
+        entity: Entity::new(),
+        name: "receptionist".to_string(),
+        dialogue: vec!["To leave, exit through the gate.".to_string()],
+        talked_to: 0,
+        id: 2
+    };
+    return receptionist;
 }
